@@ -1172,12 +1172,12 @@
       "deliver": "Yayy! Entrega finalizada! Tu recebeu **{{award}}** :star:",
       "finished-bonus": "Caminhão completo! Você recebeu um bônus de **{{award}}** :star: por conseguir entregar todas as suas entregas diárias!",
       "daily-deliveries": "Entregas Diárias",
-      "deliver-button": "Entregar {{index}}",
+      "deliver-button": "Entregar pedido",
       "deliver-embed-name": "Entrega {{index}}",
-      "deliver-embed-name-finished": "~~Entrega {{index}}~~ ✅",
+      "deliver-embed-name-finished": "✅ ~~Entrega {{index}}~~",
       "deliver-embed-field": "Estrelinhas: **{{award}}** :star:",
       "deliver-embed-field-need": "Necessário: **{{amount}} Kg** {{emoji}}",
-      "description": "Uma vez por dia o caminhão de entregas aparecerá em sua fazendinha para buscar por entregas. Finalizar todas as entregas antes do caminhão partir lhe dará um adicional de **{{bonus}}** :star: estrelinhas\n\n O caminhão partirá <t:{{unix}}:R>"
+      "description": "Uma vez por dia o caminhão de entregas aparecerá em sua fazendinha para buscar entregas. Finalizar todas as entregas antes do caminhão partir lhe dará um adicional de **{{bonus}}** :star: estrelinhas\n\n O caminhão partirá <t:{{unix}}:R>"
     },
     "silo": {
       "embed-title": "Silo de {{user}}",
